@@ -11,7 +11,7 @@
 <ul id="features">
 <li>
   <h2 class="name">Stacks</h2>
-  <div class="picture"><img src="Stacks.png"></div>
+  <div class="picture"><img src="Stacks.png" alt="Screenshot of the Leopard desktop with a Stack open as a fan on the lower left."></div>
   <div class="description">
     <b>Stacks</b> are Dock items that gives you fast access to a
     folder of files. When you click a stack, the files within spring
@@ -22,7 +22,7 @@
 </li>
 <li>
   <h2 class="name">Cover Flow</h2>
-  <div class="picture"><img src="Finder Coverflow.png"></div>
+  <div class="picture"><img src="Finder%20Coverflow.png" alt="Screenshot of a Finder window, showing a Cover Flow view of the user's Documents directory."></div>
   <div class="description">
     <b>Cover Flow</b> lets you flip through your documents as easily
     as you flip through album art in iTunes. Cover Flow displays each
@@ -34,7 +34,7 @@
 </li>
 <li>
   <h2 class="name">Quick Look</h2>
-  <div class="picture"><img src="Quick Look.png"></div>
+  <div class="picture"><img src="Quick%20Look.png" alt="Screenshot of a QuickLook full screen movie preview."></div>
   <div class="description">
     <b>Quick Look</b> works with nearly every file on your system,
     including images, text files, PDF documents and movies. Just tap
@@ -45,7 +45,7 @@
 </li>
 <li>
   <h2 class="name">Time Machine</h2>
-  <div class="picture"><img src="Time Machine.png"></div>
+  <div class="picture"><img src="Time%20Machine.png" alt="Screenshot of Time machine; a stack of Finder windows recedes into the horizon."></div>
   <div class="description">
     <b>Time Machine</b> backs up your system files, applications,
     accounts, preferences, music, photos, movies, and documents. But
@@ -56,7 +56,7 @@
 </li>
 <li>
   <h2 class="name">Mail Stationery</h2>
-  <div class="picture"><img src="Mail Stationery.png"></div>
+  <div class="picture"><img src="Mail%20Stationery.png" alt="Ascreenshot of two Mail windows. The one in front shows the Stationery chooser, the one behind shows a received email using Stationery.></div>
   <div class="description">
     <b>Mail Stationery</b> features 30 professionally designed
     templates that make a virtual keepsake out of every email you
@@ -68,7 +68,7 @@
 </li>
 <li>
   <h2 class="name">Spaces</h2>
-  <div class="picture"><img src="Spaces.png"></div>
+  <div class="picture"><img src="Spaces.png alt="Screenshot of spaces, showing four scaled down desktops in a two by two grid."></div>
   <div class="description">
     <b>Spaces</b> lets you group your application windows and banish
     clutter completely. Leopard gives you a space for everything and
